fix for bug #44790.  Fix TestGtkEmbed crash on startup.  Ignore the return value from nsIChromeRegistry::CheckForNewChrome().  Also, clean up event queue start up and shut down, fix tabs in file, some 80 col violations and some other code formatting cleanups.  r,a=brendan